--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <p></p>
+    <h1>Hola mundo </h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nostrum nulla molestiae illum quasi laudantium, incidunt totam obcaecati, fugiat eaque hic! Fugiat, ipsam porro rem consectetur ex repellat aliquam accusantium!</p>
 </body>
 
-</html>
+</html> 
