--- a/index.html
+++ b/index.html
@@ -3,14 +3,50 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola mundo</title>
+    <meta name="description"
+        content="Herramientas educativa para clasificar números en conjuntos(natulares , enteros , racionales  y resolver operaciones aritmeticas.)">
+    <title>Razonamiento Cuantitativo</title>
+    <link rel="stylesheet" href="/css/Style.css">
+
 </head>
 
 <body>
-    <h1>Hola mundo </h1>
+    <div class="principal">
+        <nav class="tabs-nav" role="tablist">
+            <button class="tab-btn" role="tab">
+                <span class="nav-tab-text">Conjuntos de números</span> 
+                 
+            <button class="tab-btn" role="tab">
+               <span class="nav-tab-text">Operaciones aritmeticas</span>
+            </button>
+            <button class="tab-btn" role="tab">
+                 <span class="nav-tab-text">:)))))</span>
+            </button>
+        </nav>
+        <section id="Panel-clasificar" class="tab-panel active">
+            <div class="card">
+                <h2>Clasificador de conjuntos de números</h2>
+                <p>IOngresa un número y selecciona un conjunto para verificar si pertenece a el</p>
+                <input type="text" id="numero_input">
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nostrum nulla molestiae illum quasi laudantium, incidunt totam obcaecati, fugiat eaque hic! Fugiat, ipsam porro rem consectetur ex repellat aliquam accusantium!</p>
+                <select id="select_CONJUNTOS">
+                    <option value="natulares">natulares</option>
+                    <option value="enteros">enteros</option>
+                    <option value="racionales">racionales</option>
+                </select>
+
+            </div>
+
+        </section>
+        <h1>Hola mundo </h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nostrum nulla molestiae illum quasi laudantium,
+            incidunt totam obcaecati, fugiat eaque hic! Fugiat, ipsam porro rem consectetur ex repellat aliquam
+            accusantium!</p>
+
+    </div>
 </body>
 
-</html> 
+
+
+</html>
