--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <html lang="en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,37 +14,47 @@
     <div class="principal">
         <nav class="tabs-nav" role="tablist">
             <button class="tab-btn" role="tab">
-                <span class="nav-tab-text">Conjuntos de números</span> 
-                 
-            <button class="tab-btn" role="tab">
-               <span class="nav-tab-text">Operaciones aritmeticas</span>
-            </button>
-            <button class="tab-btn" role="tab">
-                 <span class="nav-tab-text">:)))))</span>
-            </button>
+                <span class="nav-tab-text">Conjuntos de números</span>
+
+                <button class="tab-btn" role="tab">
+                    <span class="nav-tab-text">Operaciones aritmeticas</span>
+                </button>
+                <button class="tab-btn" role="tab">
+                    <span class="nav-tab-text">:)))))</span>
+                </button>
         </nav>
         <section id="Panel-clasificar" class="tab-panel active">
             <div class="card">
-                <h2>Clasificador de conjuntos de números</h2>
-                <p>IOngresa un número y selecciona un conjunto para verificar si pertenece a el</p>
-                <input type="text" id="numero_input">
+                <div class="car-header">
+                    <h2>Clasificador de conjuntos de números</h2>
+                    <p>Ingresa un número y selecciona un conjunto para verificar si pertenece a el</p>
+                </div>
+                <div class="card-body">
 
-                <select id="select_CONJUNTOS">
-                    <option value="natulares">natulares</option>
-                    <option value="enteros">enteros</option>
-                    <option value="racionales">racionales</option>
-                </select>
+                    <div class="card-object">
+                        <label>Inserte el número:</label>
+                        <input type="text" id="numero_input" placeholder=" Ej: 1, -8, 3/4 , 7.6">
+
+                    </div>
+
+
+                    <div class="">
+                        <select id="select_CONJUNTOS">
+
+                            <option value="Selecccione un conjunto">Seleccione un conjunto</option>
+                            <option value="natulares">natulares (N)</option>
+                            <option value="enteros">enteros (Z)</option>
+                            <option value="racionales">racionales (Q) </option>
+                 </select>
+                    </div>
+                    <button class="tab-btn" id="btn _ clasificador" type="button">Evaluar</button>
+                </div>
 
             </div>
+               
 
         </section>
-        <h1>Hola mundo </h1>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nostrum nulla molestiae illum quasi laudantium,
-            incidunt totam obcaecati, fugiat eaque hic! Fugiat, ipsam porro rem consectetur ex repellat aliquam
-            accusantium!</p>
-
-    </div>
 </body>
 
 
