otro cambio de html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+    <header></header>
+    <div class="header">
+        <h1>Herramienta educativa para razonamiento cuantitativo .</h1>
+        <p class="header-desc">
+            Herramienta educativa para clasificar números en conjuntos (natulares , enteros y racionales ) y crear operaciones aritmérica con explicaciones paso a paso</p>
+    </div>
     <div class="principal">
         <nav class="tabs-nav" role="tablist">
             <button class="tab-btn" role="tab">
