--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             Herramienta educativa para clasificar números en conjuntos (natulares , enteros y racionales ) y crear operaciones aritmérica con explicaciones paso a paso</p>
     </div>
     <div class="principal">
-        <nav class="tabs-nav" role="tablist">
+        
+        <nav class="opciones-nav" role="tablist">
             <button class="tab-btn" role="tab">
                 <span class="nav-tab-text">Conjuntos de números</span>
+                </button>
 
                 <button class="tab-btn" role="tab">
                     <span class="nav-tab-text">Operaciones aritmeticas</span>
@@ -28,6 +30,7 @@
                 <button class="tab-btn" role="tab">
                     <span class="nav-tab-text">:)))))</span>
                 </button>
+            </div>
         </nav>
         <section id="Panel-clasificar" class="tab-panel active">
             <div class="card">
